--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -61,7 +62,15 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
+    //gide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+    implementation("io.coil-kt:coil:2.2.2")
+
 
     implementation 'androidx.appcompat:appcompat:1.6.0-alpha04'
+    kapt "com.android.databinding:compiler:'1.1.3-2'"
+
 
 }
